--- a/GameNight/Server/appsettings.Development.json
+++ b/GameNight/Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GameContext" :  "Server=localhost;Database=game_night;User=postgres;Password=Password"
   }
 }
