Changed table names

--- a/GameNight/Server/appsettings.Development.json
+++ b/GameNight/Server/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "GameContext" :  "Server=localhost;Database=game_night;User=postgres;Password=Password"
+    "GameContext": "Server=localhost;Database=game_night;Username=postgres;Password=password"
   }
 }
